# lumilar

./: .gitignore  CMakeLists.txt  README.md  cluster_build.sh  open_latest_root.sh  rename_latest_root.sh  run_build.sh  setup_config.sh  simple_build.sh  to_complete.md
docs/: implementations.md
include/: ActionInitialisation.hh  AlphaGammaPhysics.hh  AlphaGammaProcess.hh  AlphaGammaProcess.txt  AnalysisManager.hh  AnalysisManager.hhhhhh  DetectorConstruction.hh  EventAction.hh  Excitation.hh  Ionisation.hh  MarleyGenerator.hh  MaterialProperties.hh  MediumResponse.hh  NeutronPhysics.hh  OpticalPhoton.hh  OutputManager.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PulseShapeOutput.hh  Recombination.hh  Relaxation.hh  RunAction.hh  Scintillation.hh  SensorConstruction.hh  Signal.hh  SteppingAction.hh  TrackingAction.hh
include/analysis/: AnalysisManager.hh  AnalysisMessenger.hh  AnalysisResults.hh  Calorimetry.hh  Coverage.hh  GeometricAcceptance.hh  HitDataHandler.hh  IonisationCollection.hh  MCTruthManager.hh  PulseShape.hh  ScintillationCollection.hh  TruthManager.hh
include/generators/: BulkVertexGenerator.hh  BxDecay0Generator.hh  BxDecay0Messenger.hh  GeneratorParticle.hh  MCParticle.hh  MarleyGenerator.hh  Particle.hh  PrimaryGeneratorAction.hh  RandomVertex.hh  VertexGeneratorInterface.hh
include/geometry/: DetectorConstruction.hh  DetectorMessenger.hh  InstrumentConstruction.hh  OpticalSensor.hh  RandomVertex.hh  SensorConstruction.hh
include/physics/: AnalyticalOptics.hh  Ejection.hh  ElectronCloud.hh  EnergyDeposit.hh  Excitation.hh  Ionisation.hh  MaterialProperties.hh  MediumProperties.hh  MediumResponse.hh  OpticalPhoton.hh  Optics.hh  PhotonRadiant.hh  Propagation.hh  PropagationTime.hh  Recombination.hh  Relaxation.hh  Scintillation.hh  Signal.hh  ThermalElectron.hh
include/utilities/: ThreadPool.hh
source/: ActionInitialisation.cc  AlphaGammaPhysics.cc  AlphaGammaProcess.cc  AlphaGammaProcess.txt  AnalysisManager.cc  AnalysisManager.ccccc  AnalyticalOptics.cc  DetectorConstruction.cc  EventAction.cc  Excitation.cc  Ionisation.cc  Main.cc  MarleyGenerator.cc  MaterialProperties.cc  MediumResponse.cc  NeutronPhysics.cc  OutputManager.cc  PhysicsList.cc  PulseShapeOutput.cc  Recombination.cc  Relaxation.cc  RunAction.cc  Scintillation.cc  Signal.cc  SimulationMain.cc  SteppingAction.cc  TrackingAction.cc
source/analysis/: .HitDataHandler.cc.swp  AnalysisManager.cc  AnalysisMessenger.cc  Calorimetry.cc  Coverage.cc  GeometricAcceptance.cc  HitDataHandler.cc  IonisationCollection.cc  MCTruthManager.cc  PulseShape.cc  ScintillationCollection.cc  TruthManager.cc
source/generators/: BulkVertexGenerator.cc  BxDecay0Generator.cc  BxDecay0Messenger.cc  GeneratorParticle.cc  MCParticle.cc  MarleyGenerator.cc  Particle.cc  PrimaryGeneratorAction.cc  VertexGeneratorInterface.cc
source/geometry/: DetectorConstruction.cc  DetectorMessenger.cc  InstrumentConstruction.cc  SensorConstruction.cc
source/physics/: AnalyticalOptics.cc  AnalyticalOptics.txt  Ejection.cc  EnergyDeposit.cc  Excitation.cc  Ionisation.cc  MaterialProperties.cc  MediumProperties.cc  MediumResponse.cc  Optics.cc  Propagation.cc  PropagationTime.cc  Recombination.cc  Relaxation.cc  Scintillation.cc  Signal.cc
system/: Untitled.ipynb  charge_light_signals  charge_light_yield  coincidence_plots.ipynb  energyloss  fraction_cascade_levels  marley_results  memcheck.txt  process_optical_detectors  results.txt
system/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  coincidence_plots-checkpoint.ipynb
system/analysis/: Dict.cxx  LArNEST.ipynb  LinkDef.h  collection_efficiency.ipynb  compile_script.sh  decision_tree.ipynb  delayed_coincidence_marley.c  delayed_coincidence_marley.ipynb  energy_efficiency.ipynb  energy_resolution.ipynb  event_arrival_time.c  fraction_cascade_levels.c  miscellaneous.ipynb  misecllanious.ipynb  neutrino_interactions.ipynb  oscillation_prob.ipynb  position_efficiency.ipynb  precision_sensitivity.ipynb  process_active_fiducialisation.c  process_decision_tree.c  process_efficiency_sensitivity.c  process_energy_efficiency.c  process_optical_detectors  process_optical_detectors.c  process_photon_efficiency.c  process_position_efficiency.c  process_pulse_shape_discrimination.c  process_radiologicals.c  pulse_shape_discrimination.ipynb  radiological_background.ipynb  truth_event_display.ipynb
system/detector/: DUNE.txt  debug_tpc.mac  dune_hd.mac  dune_solar.mac  dune_tpc.mac  simpleLArTPC.txt  small.txt  solar_tpc.mac
system/detector/placements/: dune_hd_placements.txt  dune_solar_placements.txt  placement_generation.py
system/generator/: bxdecay0_Ar39.mac  bxdecay0_Ar42.mac  bxdecay0_Bi214.mac  bxdecay0_K42.mac  bxdecay0_Kr85.mac  bxdecay0_Pb214.mac  bxdecay0_Rn222.mac  bxdecay0_debug.mac  gun_alpha_mono.mac  gun_electron_lin.mac  gun_electron_mono.mac  gun_muon_mono.mac  gun_proton_lin.mac  gun_proton_mono.mac  init_vis.mac  marley_B8_CC.mac  marley_B8_ES.mac  marley_HEP_CC.mac  marley_HEP_ES.mac  marley_lin.mac  marley_mono.mac  marley_solar.mac  marley_unif.mac  marley_unif_ES.mac  vis.mac
system/generator/config/: marley_config_B8_CC.js  marley_config_B8_ES.js  marley_config_HEP_CC.js  marley_config_HEP_ES.js  marley_mono.js  marley_solar.js  marley_unif.js  marley_unif_ES.js
system/scripts/: charge_light_signals.c  charge_light_yield.c
